--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -21,9 +21,7 @@
                 </div>
                 <div class="card__actions">
                     <a class="btn" href="/product/<%= product.id %>"> Details </a>
-                    <form action="add-to-cart/">
-                        <button class="btn">Add to Cart</button>
-                    </form>
+                    <%- include('../includes/add-to-cart.ejs', {product:product}) %>
                    
                 </div>
         </article>
